--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,11 +1,11 @@
 <div ng-controller="headerCtrl">
 
 <ul class="nav nav-pills navbar-fixed-top visible-xs" style="background-color: white">
-    <li><a href="#" ng-click="goto('/stream')"><i class="icon-eye-open icon-2x"></i></a></li>
-    <li>
+    <li ng-if="!userService.validateRoleGuest()"><a href="#" ng-click="goto('/stream')"><i class="icon-eye-open icon-2x"></i></a></li>
+    <li ng-if="!userService.validateRoleGuest()">
         <a href="#" onclick="return false;" ng-click="goto('/stream/{{userAlias}}')"><i
                 class="icon-bullhorn icon-2x"></i></a></li>
-    <li>
+    <li >
         <a href="#" onclick="return false;" ng-click="goto('/interest')"><i class="icon-question-sign icon-2x"></i></a>
     </li>
     <li>
@@ -13,22 +13,24 @@
             <i class="icon-chevron-down"></i>
         </a>
         <ul class="dropdown-menu" role="menu">
-            <li>
+            <li ng-if="!userService.validateRoleGuest()">
                 <a
                    href="#" onclick="return false;" ng-click="goto('/messages')"><i class="icon-envelope"></i> 我的消息</a>
             </li>
             <li role="presentation"
-                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
+                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);" ng-if="!userService.validateRoleGuest()">
                 <a role="menuitem" tabindex="-1"
                    href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i> 个人设置</a>
             </li>
-            <li role="presentation" class="hidden-xs"><a role="menuitem" tabindex="-1" href="#"
+            <li role="presentation" class="hidden-xs" ng-if="!userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#"
                                                          onclick="return false;"
                                                          ng-click="goto('/upload')"><i
                     class="icon-cloud-upload"></i> 录制音乐</a>
             </li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="return false;"
+            <li ng-if="!userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#" onclick="return false;"
                                        ng-click="logout()"><i class="icon-signout"></i> 退出登陆</a></li>
+            <li ng-if="userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#" onclick="return false;"
+                                                                                ng-click="showLoginForm()"><i class="icon-signin"></i> 登录注册</a></li>
         </ul>
     </li>
 </ul>
@@ -42,7 +44,7 @@
     <li ng-show="wooicePlayer.getCurSound().id">
         <a href="{{wooicePlayer.getCurSound().title.route}}">{{wooicePlayer.getCurSound().title.alias}}</a>
     </li>
-    <li class="pull-right">
+    <li class="pull-right" ng-if="!userService.validateRoleGuest()">
         <a class="playlist" ng-click="showPlaylist=!showPlaylist"><i class="icon-th-list icon-2x" title="播放列表"></i></a>
 
         <div style="position : absolute;bottom: 100%;background-color: #333;margin-left: -160px;
@@ -100,18 +102,17 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-top hidden-xs" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" style="padding: 0px;" href="#" title="Wooice" ng-click="goto('/stream')">
+        <a class="navbar-brand" style="padding: 0px;" href="#" title="Wooice" ng-click="goto('/interest')">
             <img class="img-responsive" ng-src="img/logo.jpg"   style="width: 50px;height: 50px"/>
         </a>
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li>
-                <a href="#" title="你关注的声音推送" ng-click="goto('/stream')"><i class="icon-eye-open"></i></a>
+            <li ng-if="!userService.validateRoleGuest()">
+                <a href="#" title="你关注的声音推送" ng-click="goto('/stream')">关注</a>
             </li>
             <li>
-                <a href="#" onclick="return false;" ng-click="goto('/interest')" title="发现你感兴趣的声音"><i
-                        class="icon-question-sign"></i></a>
+                <a href="#" onclick="return false;" ng-click="goto('/interest')" title="发现你感兴趣的声音">发现</a>
             </li>
         </ul>
 
@@ -123,11 +124,11 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#" onclick="return false;" title="上一首"><i
-                    style="cursor:pointer;color:#e5e5e5"
+                    style="cursor:pointer;"
                     class='icon-step-backward' ng-click="playPre()"></i></a>
             </li>
             <li><a href="#" onclick="return false;">
-                <i style="cursor:pointer;color:#e5e5e5"
+                <i style="cursor:pointer;"
                    class='sound_player_button'
                    ng-class="wooicePlayer.getCurSound().isPlaying? 'icon-pause': 'icon-play'"
                    ng-click="togglePause()"></i></a></li>
@@ -135,18 +136,18 @@
                 <a href="{{wooicePlayer.getCurSound().title.route}}">{{wooicePlayer.getCurSound().title.alias}}</a>
             </li>
             <li><a href="#" onclick="return false;" title="下一首"><i
-                    style="cursor:pointer;color:#e5e5e5"
+                    style="cursor:pointer;"
                     class='icon-step-forward' ng-click="playNext()"></i></a>
             </li>
             <li><a href="#" onclick="return false;" title="{{playModes[playMode]}}"
                    ng-click="changePlayStyle()">
-                <i style="cursor:pointer;color:#e5e5e5" class='icon-list-ol' ng-show="playMode == 0"></i>
-                <i style="cursor:pointer;color:#e5e5e5" class='icon-exchange' ng-show="playMode == 1"></i>
-                <i style="cursor:pointer;color:#e5e5e5" class='icon-random' ng-show="playMode == 2"></i>
-                <i style="cursor:pointer;color:#e5e5e5" class='icon-minus-sign-alt' ng-show="playMode == 3"></i>
+                <i style="cursor:pointer;" class='icon-list-ol' ng-show="playMode == 0"></i>
+                <i style="cursor:pointer;" class='icon-exchange' ng-show="playMode == 1"></i>
+                <i style="cursor:pointer;" class='icon-random' ng-show="playMode == 2"></i>
+                <i style="cursor:pointer;" class='icon-minus-sign-alt' ng-show="playMode == 3"></i>
             </a>
             </li>
-            <li style="padding-right: 40px">
+            <li style="padding-right: 40px" ng-if="!userService.validateRoleGuest()     ">
                 <a class="playlist" ng-click="showPlaylist=!showPlaylist"><i class="icon-th-list" title="播放列表"></i></a>
 
                 <div style="position : absolute;background-color: #333;margin-left: -65px;
@@ -177,28 +178,30 @@
                     </div>
                 </div>
             </li>
-            <li style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
+            <li ng-if="!userService.validateRoleGuest()" style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
                 <a href="#" onclick="return false;" ng-click="goto('/stream/{{userAlias}}')" title="您的主页"  style="padding: 10px;">
                        <img ng-src="{{userAvatar}}" class="user_avatar_oval" style="width: 30px;height: 30px"/>
                 </a>
             </li>
-            <li>
+            <li ng-if="!userService.validateRoleGuest()">
                 <a title="邮件箱"
                    href="#" onclick="return false;" ng-click="goto('/messages')"><i class="icon-envelope"></i>
                     <span class="badge" ng-if="unreadMsgs>0">{{unreadMsgs}}</span>
                 </a>
             </li>
-            <li>
+            <li ng-if="!userService.validateRoleGuest()">
                 <a title="个人配置"
                    href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i></a>
             </li>
-            <li style="padding-right: 50px"><a href="#" onclick="return false;" ng-click="goto('/upload')"
+            <li style="padding-right: 50px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="goto('/upload')"
                                                title="声音上传"><i
                     class="icon-cloud-upload"></i></a>
             </li>
             <li><a href="#feedback" onclick="return false;" data-toggle="modal" title="意见反馈"><i
                     class="icon-edit"></i></a></li>
-            <li style="padding-right: 10px"><a href="#" onclick="return false;" ng-click="logout()"><i
+            <li style="padding-right: 10px" ng-if="userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="showLoginForm()"><i
+                    class="icon-signin" title="注册登录"></i></a></li>
+            <li style="padding-right: 10px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="logout()"><i
                     class="icon-signout" title="退出登录"></i></a></li>
         </ul>
     </div>
