--- a/app/partials/user/externalProfile.html
+++ b/app/partials/user/externalProfile.html
@@ -1,5 +1,9 @@
 <div ng-controller="externalProfileCtrl">
-    <legend><i class="icon-sitemap"></i> 外站信息</legend>
+    <div class="title_div">
+        <h2 class="title_h2"><i class="icon-sitemap"></i> 外站信息</h2>
+    </div>
+
+
     <div style="padding-bottom: 10px">
         <span class="{{messageClass}}">{{message}}</span>
     </div>
