--- a/app/partials/user/secureManagement.html
+++ b/app/partials/user/secureManagement.html
@@ -1,6 +1,9 @@
 <div>
     <div ng-controller="submitChangePassCtrl" style="padding-bottom: 50px">
-        <legend><i class="icon-key"></i> 重置密码</legend>
+        <div class="title_div">
+            <h2 class="title_h2"><i class="icon-key"></i> 重置密码</h2>
+        </div>
+
         <form class="form-horizontal">
             <div class="form-group">
                 <div class="controls" style="margin-left: 100px">
@@ -18,7 +21,10 @@
     </div>
 
     <div ng-controller="changeContactEmailCtrl" style="padding-bottom: 50px">
-        <legend><i class="icon-envelope"></i> 更新联系邮箱</legend>
+        <div class="title_div">
+            <h2 class="title_h2"><i class="icon-envelope"></i> 更新联系邮箱</h2>
+        </div>
+
         <form name="changeContactForm" class="form-horizontal">
             <div class="form-group">
                 <div class="controls" style="margin-left: 100px">
