--- a/app/partials/userStream.html
+++ b/app/partials/userStream.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="row" style="margin-right: 0px;margin-left: 0px;padding-top: 320px">
+    <div class="row" style="margin-right: 0px;margin-left: 0px;padding-top: {{deviceEnv!='xs'?'320px':''}}">
         <div class="col-md-2 hidden-xs">
         </div>
 
