--- a/app/partials/commonStream.html
+++ b/app/partials/commonStream.html
@@ -17,7 +17,7 @@
                         <span class="pull-right">
                             <i style="cursor:pointer" ng-show="recommendUsers.length > 0"
                                class='button button-small button-pill'
-                               ng-click="save()">关注选定用户</i>
+                               ng-click="save()">关注</i>
                          </span>
                     </legend>
 
@@ -38,8 +38,11 @@
                             </div>
                         </div>
                     </div>
-                    <div ng-if="recommendUsers.length == 0" style="padding-left: 15px">
+                    <div ng-if="!loadingUsers && recommendUsers.length == 0" style="padding-left: 15px">
                         暂无用户推荐
+                    </div>
+                    <div ng-if="loadingUsers">
+                        <span><i class="icon-spinner icon-spin"></i>努力加载中...</span>
                     </div>
                 </div>
 
@@ -61,8 +64,11 @@
                         </div>
                     </div>
 
-                    <div ng-if="recommendSounds.length == 0" style="padding-left: 15px">
+                    <div ng-if="!loadingSounds && recommendSounds.length == 0" style="padding-left: 15px">
                         暂无声音推荐
+                    </div>
+                    <div ng-if="loadingSounds">
+                        <span><i class="icon-spinner icon-spin"></i>努力加载中...</span>
                     </div>
                 </div>
             </div>
