--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -27,7 +27,7 @@
             <div id="sound_player_{{sound.id}}" class='sound_player col-md-10 col-xs-12' style="padding-left: 0px;padding-right: 0px;">
                 <div class="pull-right">
                     <div style="font-size: 12px;color: gray" class="pull-right">
-                        {{sound.createdTime}}
+                        {{sound.createdTime}} <span ng-if="user.profile && user.profile.alias!=sound.owner.alias"><span class="badge">转</span></span>
                     </div>
                 </div>
 
@@ -87,12 +87,12 @@
                     <div class="row" style="margin: 0px">
                         <div class="col-md-5 hidden-xs" style="padding-left: 0px;padding-right: 0px">
                             <a href="#" class="button button-tiny button-rounded  button-flat action-button"
-                               onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i>
-                                <span ng-show="sound.soundUserPrefer.like=='0'">赞</span></a>
+                               onclick="return false;" ng-click="like(sound)"><i class="icon-heart"></i></i>
+                                <span ng-show="!sound.soundUserPrefer.like">赞</span></a>
                             <a href="#" class="button button-tiny button-rounded  button-flat action-button"
-                               onclick="return false;" ng-click="toggleRepost(sound.id)"><i
+                               onclick="return false;" ng-click="repost(sound)"><i
                                     class="icon-retweet"></i></i> <span
-                                    ng-show="sound.soundUserPrefer.repost==0">转</span></a>
+                                    ng-show="!sound.soundUserPrefer.repost">转</span></a>
                             <a href="#" class="button button-tiny button-rounded button-flat action-button hasTooltip"
                                onclick="return false;"
                                     ><i class="icon-share"></i>分享
@@ -125,13 +125,13 @@
 
                         <div class="col-xs-5 visible-xs" style="padding: 0px;margin-right: -10px">
                             <span>
-                                <button class="btn btn-xs"  ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i>
-                                    <span ng-show="sound.soundUserPrefer.like=='0'">赞</span></button>
+                                <button class="btn btn-xs"  ng-click="like(sound)"><i class="icon-heart"></i></i>
+                                    <span ng-show="!sound.soundUserPrefer.like">赞</span></button>
                             </span>
                             <span>
-                                <button class="btn btn-xs"  ng-click="toggleRepost(sound.id)"><i
+                                <button class="btn btn-xs"  ng-click="repost(sound)"><i
                                         class="icon-retweet"></i></i> <span
-                                        ng-show="sound.soundUserPrefer.repost==0">转</span></button>
+                                        ng-show="!sound.soundUserPrefer.repost">转</span></button>
                             </span>
                             <span  ng-show="sound.owner.alias == userService.getCurUserAlias()">
                                 <button class="btn btn-xs" ng-click="delete()"><i
